kubernetes/backend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-depl
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: backend
          image: backend
          imagePullPolicy: IfNotPresent
          args: ["start:sync"]
          ports: 
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: backend-srv
spec:
  selector:
    app: app
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
