kubernetes/database-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database-sts
spec:
  selector:
    matchLabels:
      app: app
  serviceName: database-srv
  replicas: 1
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
          - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Mi

---
apiVersion: v1
kind: Service
metadata:
  name: database-srv
spec:
  selector:
    app: app
  type: ClusterIP
  clusterIP: None
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
